# Win32VSSWrapper

./: CMakeLists.txt  Demo.cpp  README.md  VssClient.cpp  VssClient.h
.github/workflows/: cmake-single-platform.yml
